# beets-logcheck

./: .gitignore  pyproject.toml
src/beetsplug/: logcheck.py
