[tool.poetry]
name = "beets-logcheck"
version = "0.1.0"
description = ""
authors = ["Andrew Simmons <agsimmons0@gmail.com>"]
packages = [
    { include = "beetsplug", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.6.1"
beets = {git = "https://github.com/beetbox/beets", rev = "master"}
heybrochecklog = {git = "https://github.com/ligh7s/hey-bro-check-log", rev = "master"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
pytest = "^6.2.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
